# dmv_price_tracker

./: .gitignore  LICENSE  README.md
dmv_price_tracker/: Cargo.toml
dmv_price_tracker/data_pipeline/: Cargo.toml  README.md  env.example
dmv_price_tracker/data_pipeline/src/: main.rs
dmv_price_tracker/wasm_viewer/: .gitignore  Cargo.toml  README.md  debug-data.js  serve.bat  serve.sh  setup-env.bat  setup-env.sh
dmv_price_tracker/wasm_viewer/src/: lib.rs
dmv_price_tracker/wasm_viewer/www/: config.example.js  index.html  main.js  style.css
