[package]
name = "data_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.41.0", features = ["lazy", "json", "parquet"] }
rstar = "0.12.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
dotenv = "0.15"