[package]
name = "wasm_viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
polars = { version = "0.41.0", features = ["lazy", "json"] }
plotlars = "0.3.0" # Check for latest version
serde_json = "1.0"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
    "Window",
    "Document",
    "Element",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers"
]}